--- a/apps/front-angular/project.json
+++ b/apps/front-angular/project.json
@@ -90,6 +90,35 @@
         "jestConfig": "apps/front-angular/jest.config.ts",
         "passWithNoTests": true
       }
+    },
+    "storybook": {
+      "executor": "@storybook/angular:start-storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "apps/front-angular/.storybook",
+        "browserTarget": "front-angular:build",
+        "compodoc": false
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@storybook/angular:build-storybook",
+      "outputs": ["{options.outputDir}"],
+      "options": {
+        "outputDir": "dist/storybook/front-angular",
+        "configDir": "apps/front-angular/.storybook",
+        "browserTarget": "front-angular:build",
+        "compodoc": false
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
     }
   },
   "tags": []
